# outreach

./: .dockerignore  .env.example  .gitignore  .prettierrc.json  API.md  CLAUDE.md  Dockerfile  PLAN.md  README.md  REFACTOR_PLAN.md  TASKS.md  docker-compose.yml  package.json
messages_sync_helper/: README.md  pyproject.toml  requirements.txt  setup.py
messages_sync_helper/assets/: .gitkeep  icon.icns
messages_sync_helper/src/: __init__.py  __main__.py  config.py  db_worker.py  login_item.py  main.py  messages_db.py  sync_client.py  watcher.py
prisma/: schema.prisma
public/: index.html  manifest.json
scripts/: build-sync-helper.sh  docker-build.sh
server/: config.ts  db.ts  discord-bot.ts  index.ts  tsconfig.json  vitest.config.ts
server/adapters/: imessage.ts
server/api/: attachments.ts  contacts-csv.ts  contacts.ts  discord.ts  downloads.ts  health.ts  index.test.ts  index.ts  lookups.ts  messages.ts  suggested-updates.ts
server/jobs/: messageSync.ts
server/services/: messageAnalyzer.ts  messageBatcher.ts  messageStorage.ts  processingQueue.ts
server/tests/: baml-test.ts
server/utils/: messageHash.test.ts  messageHash.ts  paths.ts  phoneNumber.ts
server/websocket/: index.ts  messagesSyncHandler.ts
src/: App.test.tsx  App.tsx  index.tsx  test-utils.tsx
src/components/Layout/: Layout.tsx
src/contexts/: ThemeModeContext.ts
src/pages/: Admin.tsx  Home.tsx
src/styles/: mixins.ts  theme.ts
src/types/: Contact.ts  User.ts  index.ts
src/utils/: adminApi.ts  api.ts  contactsApi.ts  errorReporter.ts  phoneNumber.ts  suggestedUpdatesApi.ts
(+12 files in other folders)
