[project]
name = "messages_sync_helper"
version = "0.1.0"
description = "macOS menu bar app for syncing iMessage data"
requires-python = ">=3.10"
dependencies = [
    "rumps>=0.4.0",
    "watchdog>=3.0.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "py2app>=0.28.0",
    "pyinstaller>=6.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
