[project]
name = "messages_sync_helper"
version = "0.1.0"
description = "macOS menu bar app for syncing iMessage data"
requires-python = ">=3.10"
# Dependencies managed in requirements.txt (py2app doesn't support install_requires)

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
